...
    </plurals>
    <string name="sync_now">Sync now</string>
    <string name="sync_settings">Sync settings</string>
    <string name="sync_server_label">Server</string>
    <string name="sync_username_label">Username</string>
    <string name="sync_password_label">Password</string>
    <string name="sync_password_show">Show password</string>
    <string name="sync_password_hide">Hide password</string>
    <string name="sync_list_name_label">List name</string>
    <string name="sync_create_missing_list">Create remote list</string>
    <string name="sync_password_saved_placeholder">Saved password on device</string>
    <string name="caldav_config_title">Configure CalDAV</string>
    <string name="caldav_config_title_success">Connected</string>
    <string name="caldav_config_back">Back</string>
...
